Correct grid alignment

--- a/src/sass/imports/_sections.scss
+++ b/src/sass/imports/_sections.scss
@@ -71,13 +71,22 @@
   .block-item {
     .grid,
     .top-grid {
-      -ms-flex-align: center;
-      -webkit-align-items: center;
-      align-items: start;
       display: -ms-flexbox;
       display: -webkit-flex;
       display: flex;
       margin: 0 -0.83333rem;
+    }
+
+    .grid {
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+
+    .top-grid {
+      -ms-flex-align: start;
+      -webkit-align-items: start;
+      align-items: start;
     }
 
     .cell {
